--- a/src/assets/estilosCss/navbar.css
+++ b/src/assets/estilosCss/navbar.css
@@ -146,6 +146,11 @@ a.btn{
   display: none;
 }
 
+.conCartBtn{
+  position: absolute;
+  top: 0;
+}
+
 @keyframes pulse {
   0% { transform: scale(1); }
   50% { transform: scale(1.1); }
