--- a/src/assets/estilosCss/style.css
+++ b/src/assets/estilosCss/style.css
@@ -1561,7 +1561,7 @@ button.secondary-btn:hover {
 .discord-modal-body {
   padding: 2rem;
   max-height: 60vh;
-  overflow-y: auto;
+  overflow-y: none;
 }
 
 /* Estilos específicos del modal de eventos */
@@ -1768,7 +1768,7 @@ button.secondary-btn:hover {
 .plan-features {
   list-style: none;
   padding: 0;
-  margin: 0 0 2rem 0;
+  margin: 0 0 1rem 0;
   text-align: left;
 }
 
@@ -1778,6 +1778,7 @@ button.secondary-btn:hover {
   display: flex;
   align-items: center;
   gap: 0.3rem;
+  
 }
 
 .plan-features i {
@@ -2165,7 +2166,7 @@ input:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.199);
   backdrop-filter: blur(5px);
   z-index: 1000;
   display: flex;
@@ -2192,6 +2193,11 @@ input:focus {
   position: relative;
   width: 800px;
   color: var(--text-primary);
+}
+
+div.modal-content {
+  background-color: var(--secondary-bg);
+  border-radius: 20px;
 }
 
 .modal-close {
